[tool.poetry]
name = "TelegramExplorer"
version = "0.2.14"
description = "Telegram Explorer"
authors = ["Th3 0bservator <th30bservator@gmail.com>"]
maintainers = [
    "Th3 0bservator <th30bservator@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/guibacellar/TEx"
repository = "https://github.com/guibacellar/TEx"
documentation = "https://telegramexplorer.readthedocs.io/en/latest/"
keywords = [
        "CyberSecurity",
        "Investigation",
        "OSINT",
        "OpenSourceIntelligence",
        "Tool"
]

classifiers = [
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'License :: Freely Distributable',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Topic :: Security',
    'Topic :: Utilities',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
    { include = "TEx", from="." },
]


include = [
    "pyproject.toml",
    ".README.md"
]

exclude = [".tox", "venv", "dist"]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

poetry-core = ">=1.6.1,<2"
poetry-plugin-export = "^1.4.0"
build = "^0.10.0"

Telethon            = "1.29.2"
cryptg              = ">=0.2.post4"
telethon-cryptg     = ">=0.0.4"
SQLAlchemy          = ">=2.0.19,<2.1"
aiosqlite           = ">=0.19.0"
Jinja2              = ">=3.0.3"
pytz                = ">=2023.3"
urllib3             = ">=1.26.8"
requests            = ">=2.31.0,<3"
cachetools          = ">=5.3.1,<6"
toml                = ">=0.10.2"
tox                 = "^4.10.0"
discord-webhook     = ">=1.3.0,<2"

[tool.poetry.dev-dependencies]
pytest                  = ">=7.4.0"
tox                     = ">=4.7.0"
coverage                = ">=7.3.0"
mypy                    = ">=1.4.1"
pydocstyle              = ">=6.3.0"
bandit                  = ">=1.7.5"
pylint                  = ">=2.17.5"
pylint-pytest           = ">=1.1.2"
astroid                 = ">=2.15.6"
pycodestyle             = ">=2.11.0"
pep8-naming             = ">=0.13.3"
flake8                  = ">=6.1.0"
flake8-assertive        = ">=2.1.0"
flake8-alfred           = ">=1.1.1"
flake8-bugbear          = ">=23.7.10"
flake8-builtins         = ">=2.1.0"
flake8-blind-except     = ">=0.2.1"
flake8-comprehensions   = ">=3.14.0"
flake8-docstrings       = ">=1.7.0"
flake8-import-order     = ">=0.18.2"
flake8-rst-docstrings   = ">=0.3.0"
types-pytz              = ">=2023.3.0.0"
types-requests          = ">=2.31.0.2"
types-cachetools        = ">=5.3.0.6"
types-toml              = ">=0.10.8.7"
mkdocs                  = ">=1.5.3,<2"
mkdocs-material         = ">=9.4.2,<10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
