[tool.poetry]
name = "TelegramExplorer"
version = "0.2.15"
description = "Telegram Explorer"
authors = ["Th3 0bservator <th30bservator@gmail.com>"]
maintainers = [
    "Th3 0bservator <th30bservator@gmail.com>"
]
license = "Apache-2.0"
readme = "README.md"

homepage = "https://github.com/guibacellar/TEx"
repository = "https://github.com/guibacellar/TEx"
documentation = "https://telegramexplorer.readthedocs.io/en/latest/"
keywords = [
        "CyberSecurity",
        "Investigation",
        "OSINT",
        "OpenSourceIntelligence",
        "Tool"
]

classifiers = [
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'License :: Freely Distributable',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Topic :: Security',
    'Topic :: Utilities',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Libraries :: Python Modules',
]

packages = [
    { include = "TEx", from="." },
]


include = [
    "pyproject.toml",
    ".README.md"
]

exclude = [".tox", "venv", "dist"]

# Requirements
[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

poetry-core = ">=1.6.1,<2"
poetry-plugin-export = "^1.4.0"
build = "^0.10.0"

Telethon            = "1.29.2"
cryptg              = ">=0.2.post4"
telethon-cryptg     = ">=0.0.4"
SQLAlchemy          = ">=2.0.19,<2.1"
aiosqlite           = ">=0.19.0"
Jinja2              = ">=3.0.3"
pytz                = ">=2023.3"
urllib3             = ">=1.26.8"
requests            = ">=2.31.0,<3"
cachetools          = ">=5.3.1,<6"
toml                = ">=0.10.2"
tox                 = "^4.10.0"
discord-webhook     = ">=1.3.0,<2"

[tool.poetry.dev-dependencies]
pytest                  = ">=7.4.0"
tox                     = ">=4.7.0"
coverage                = ">=7.3.0"
mypy                    = ">=1.4.1"
pydocstyle              = ">=6.3.0"
bandit                  = ">=1.7.5"
astroid                 = ">=2.15.6"
pep8-naming             = ">=0.13.3"
types-pytz              = ">=2023.3.0.0"
types-requests          = ">=2.31.0.2"
types-cachetools        = ">=5.3.0.6"
types-toml              = ">=0.10.8.7"
mkdocs                  = ">=1.5.3,<2"
mkdocs-material         = ">=9.4.2,<10"
ruff                    = "0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

ackend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "D", # pydocstyle
    "PL", # Pylint
]
unfixable = []

exclude = [".venv", "tests", "runner.py", "__init__.py", "__main__.py"]


# Same as Black.
line-length = 200
show-fixes = true

[tool.ruff.per-file-ignores]

[tool.ruff.pydocstyle]
convention = "pep257"

[tool.ruff.pylint]
max-args=7
max-branches=12
max-public-methods=20
max-returns=6
max-statements=50

[tool.ruff.mccabe]
max-complexity = 5
